# auth-template

./: README.md
client/: pom.xml
client/src/main/java/wtf/basic/auth/: Main.java
client/src/main/java/wtf/basic/auth/hwid/: HwidKit.java  SystemSpecification.java
client/src/main/java/wtf/basic/auth/objects/: ApiResponse.java
client/src/main/java/wtf/basic/auth/utils/: Address.java  HWID.java
server/: Cargo.toml  config.yaml  hwids.yaml
server/src/: config.rs  hwid.rs  main.rs  minecraft.rs  webhook.rs
