[package]
name = "auth-template"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12.12", features = ["json"] }
log = "0.4"
env_logger = "0.11.6"
futures = "0.3"